# solaris-lang

./: .gitignore  CMakeLists.txt  README.md
src/compiler/: main.cpp
src/compiler/generator/: Generator.cpp  Generator.hpp
src/compiler/lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp  TokenType.hpp  minimize.cpp  minimize.hpp  removeComments.hpp
src/compiler/parser/: ParseData.hpp  Parser.cpp  Parser.hpp  TokenData.hpp  keywords.hpp
src/compiler/parser/ast/: AST.cpp  AST.hpp  ASTType.hpp
src/compiler/tokenizer/: Token.cpp  Token.hpp  TokenType.hpp  removeComments.cpp
src/runtime/: main.cpp
src/runtime/data/: Object.cpp  Object.hpp  ValueType.hpp
src/runtime/data/function/: CompiledFunction.cpp  CompiledFunction.hpp  Function.cpp  Function.hpp  FunctionArgument.cpp  FunctionArgument.hpp  SolarisFunction.cpp  SolarisFunction.hpp
src/runtime/data/scope/: Scope.cpp  Scope.hpp
src/runtime/state/: AbstractFunctionCaller.hpp  AbstractRuntimeState.hpp  FunctionReturnState.hpp  RuntimeState.cpp  RuntimeState.hpp  TempStack.cpp  TempStack.hpp
src/runtime/state/steps/: ADD.cpp  ADD_FUNCTION_ARGUMENT.cpp  BRANCH_IF.cpp  CALL.cpp  DECLARE.cpp  DEFINE_FUNCTION.cpp  DIVIDE.cpp  END_DEFINE_FUNCTION.cpp  EXPONENT.cpp  JUMP.cpp  MODULO.cpp  MULTIPLY.cpp  NAMESPACE_ACCESS.cpp  POP_TEMP.cpp  PUSH_TEMP.cpp  RETURN.cpp  RETURN_BRANCH.cpp  SET.cpp  SUBTRACT.cpp
src/runtime/stdlib/: macros.hpp  println.cpp  println.hpp
src/universal/assembly/: Assembly.hpp  Instruction.hpp
src/universal/file/: FileManager.cpp  FileManager.hpp
src/universal/regex/: PCRECode.cpp  PCRECode.hpp  SubstringPosition.cpp  SubstringPosition.hpp  eraseRegex.cpp  eraseRegex.hpp  excludeFromRegexMatch.cpp  excludeFromRegexMatch.hpp  findRegex.cpp  findRegex.hpp
src/universal/string/: splitString.cpp  splitString.hpp
src/universal/util/: LinkedList.cpp  LinkedList.hpp  LinkedList.tpp  Tree.hpp  Tree.tpp  concat.cpp  concat.hpp  filter.cpp  filter.hpp  getFlags.cpp  getFlags.hpp  mergeEscape.cpp  mergeEscape.hpp  scientificToNumber.cpp  scientificToNumber.hpp  split.cpp  split.hpp  trim.cpp  trim.hpp
tests/: fibonacci.sol
